--- a/fromvalidation.html
+++ b/fromvalidation.html
@@ -22,7 +22,7 @@
     <form>
         <input type="text" placeholder="name" id="nam"><br>
         <input type="text" placeholder="username" id="username"><br>
-        <input type="tel" placeholder="enter mobile no." id="mob"><br>
+        <input type="text" placeholder="enter mobile no." id="mob"><br>
         <input type="password" placeholder="password" id="pass"><br>
         <input type="password" placeholder="confirm password" id="cpass"><br>
         <button onclick="return validation()">Registrion</button>
